k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paksa-financial
  labels:
    name: paksa-financial
